Made a working search page.

--- a/AnimeSea/Views/Search/Index.cshtml
+++ b/AnimeSea/Views/Search/Index.cshtml
@@ -2,14 +2,67 @@
     ViewBag.Title = "Search";
 }
 
-<form method="post">
-    <div class="form-row">
+<div id="v_app" v-cloak>
+    <div class="form-row mb-3">
         <div class="col">
-            <input type="text" class="form-control mb-2 mr-sm-2" id="queryId" placeholder="Query">
+            <input type="text" class="form-control" id="queryId" placeholder="Query" v-model="query" :disabled="searching">
         </div>
 
         <div class="col-sm-2">
-            <button type="submit" class="btn btn-primary btn-block mb-2">Search</button>
+            <button type="submit" class="btn btn-primary btn-block mb-2" @@click="search" :disabled="searching">Search</button>
         </div>
     </div>
-</form>
+    
+    <div class="row mb-3" v-if="searching">
+        <div class="col-md-12">
+            <div class="spinner_sk_wrapper">
+                <div class="spinner_sk">
+                    <div class="rect1"></div>
+                    <div class="rect2"></div>
+                    <div class="rect3"></div>
+                    <div class="rect4"></div>
+                    <div class="rect5"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-3" v-if="resultsEmpty">
+        <div class="col-md-12">
+            <div class="alert alert-danger" role="alert">
+                <strong>Woops.. </strong>No results have been found for your query.
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-3" v-for="result in results">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <img class="img-fluid img-thumbnail" :src="result.image" alt="Cover image"/>
+                        </div>
+                        <div class="col-md-10">
+                            <h5 class="card-title">{{ result.title }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted" v-if="result.titles">Alternative titles: {{ getCommaSeperated(result.titles) }}</h6>
+                            <p class="card-text">{{ result.synopsis }}.</p>
+                            <div class="text-right">
+                                <a href="#" class="btn btn-primary">Add to library</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts
+{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js" integrity="sha256-TaLceMwjWRqe4yhbqPOJH6V7UGt5AvvdNfpaIXJWbFU=" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        var searchUrl = "@Url.Action("Submit", "Search")";
+    </script>
+    <script src="~/assets/dev/js/page_search.js"></script>
+}
