--- a/AnimeSea/Views/Shared/_Navbar.cshtml
+++ b/AnimeSea/Views/Shared/_Navbar.cshtml
@@ -14,10 +14,10 @@
                     <a class="nav-link" asp-controller="Search" asp-action="Index">Search</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            @* <form class="form-inline my-2 my-lg-0"> *@
+            @*     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> *@
+            @*     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> *@
+            @* </form> *@
         </div>
     </div>
 </nav>
