--- a/AnimeSea/Views/Shared/_Layout.cshtml
+++ b/AnimeSea/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/assets/vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="~/assets/dev/css/style.css" rel="stylesheet">
+    @RenderSection("head", true)
 </head>
 <body>
     @await Html.PartialAsync("_Navbar")
