--- a/AnimeSea/Views/_ViewImports.cshtml
+++ b/AnimeSea/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using AnimeSea.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AnimeSea
