Fix broken layout.

--- a/AnimeSea/Views/Shared/_Layout.cshtml
+++ b/AnimeSea/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
     <link href="~/assets/vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="~/assets/dev/css/style.css" rel="stylesheet">
-    @RenderSection("head", true)
+
+    @RenderSection("head", false)
 </head>
 <body>
     @await Html.PartialAsync("_Navbar")
@@ -23,6 +24,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
     @RenderSection("scripts", false)
 </body>
 </html>
