Remove unwanted configuration option.

--- a/AnimeSea/Views/Search/Index.cshtml
+++ b/AnimeSea/Views/Search/Index.cshtml
@@ -73,7 +73,7 @@
 {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js" integrity="sha256-TaLceMwjWRqe4yhbqPOJH6V7UGt5AvvdNfpaIXJWbFU=" crossorigin="anonymous"></script>
     <script type="text/javascript">
-        var searchUrl = "@Url.Action("Submit", "Search")";
+        var searchUrl = "@Url.Action("SubmitAsync", "Search")";
     </script>
     <script src="~/assets/dev/js/page_search.popout.js"></script>
     <script src="~/assets/dev/js/page_search.js"></script>
