--- a/AnimeSea/Views/Shared/_Layout.cshtml
+++ b/AnimeSea/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <meta name="author" content="">
     <title>AnimeSea - @ViewBag.Title</title>
 
-    <link href="~/assets/vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="~/assets/dev/css/style.css" rel="stylesheet">
+    <link href="~/assets/dev/css/style.css" rel="stylesheet" asp-append-version="true">
 
     @RenderSection("head", false)
 </head>
